--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,7 +17,10 @@ html(lang="en")
       div#room 
         h3
         ul
-        form
+        form#name
+          input(placeholder="write your nickname", required, type="text")
+          button Save
+        form#msg
           input(placeholder="write message", required, type="text")
           button Send
 
